<resources>
    <string name="app_name">prayertimeapp</string>
    <string name="compass">Compass</string>
    <string name="calc">Time Calculations </string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_email">email</string>
    <string name="lbl_register_here"> Register here</string>
    <string name="msg_ManageLocation">Manage Location</string>
    <string name="conventions">Calculations Conventions</string>
    <string name="msg_16_february_20">16 February, 2023 </string>
    <string name="lbl_left_03_01_02">Left: 03:01:02</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account ? Register here</string>
    <string name="lbl_12_42">12:42</string>
    <string name="lbl_left_08_17_53">Left: 08:17:53</string>
    <string name="lbl_asr">Asr</string>
    <string name="msg_don_t_have_an_a2">Don\u2019t have an account ?</string>
    <string name="lbl_17_58">17:58</string>
    <string name="lbl_19_15">19:15</string>
    <string name="lbl_about">About</string>
    <string name="lbl_isha">Isha</string>
    <string name="lbl_07_18">07:18</string>
    <string name="lbl_06_00">06:00</string>
    <string name="lbl_maghrib">Maghrib</string>
    <string name="lbl_sign_in">Sign In </string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_asalamu_alaikum">Asalamu Alaikum !!!</string>
    <string name="lbl_sign_in2">Sign in</string>
    <string name="lbl_sign_up2">Sign up</string>
    <string name="lbl_notification">Manage Notifications</string>
    <string name="lbl_salahti">SALAHTI</string>
    <string name="lbl_left_07_33_51">Left: 07:33:51</string>
    <string name="lbl_get_started">Get started</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_or">Or</string>
    <string name="lbl_16_14">16:14</string>
    <string name="lbl_dhuhr">Dhuhr</string>
    <string name="lbl_silentMode">Time calculations</string>
    <string name="lbl_fajr">Fajr</string>
    <string name="lbl_shuruk">Shuruk</string>
    <string name="lbl_25_rajab_1444">25 Rajab, 1444</string>
    <string name="lbl_quran_app">Quran App</string>
    <string name="lbl_account">Account</string>
    <string name="msg_salahti_prayer">SALAHTI Prayer App</string>
    <string name="msg_confirm_password">Confirm Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="getLocation">Get Location</string>
    <string name="longitude">Longitude</string>
    <string name="longitudeValue">0.0</string>
    <string name="latitudeValue">0.0</string>
    <string name="location">Location</string>
    <string name="manual">manual</string>
    <string name="manual_title">Manual Settings</string>
    <string name="manual_summary">Calculates the prayer times based on preferred parameters</string>
    <string name="juristic">juristic</string>
    <string name="juristic_title">Juristic Method</string>
    <string name="juristic_default">0</string>
    <string-array name="juristic_entries">
        <item> AlShafi\'i </item>
        <item> Hanafi </item>
    </string-array>
    <string-array name="juristic_values">
        <item> 0 </item>
        <item> 1 </item>
    </string-array>
    <string name="calculation">calculation</string>
    <string name="calculation_title">Calculation Conventions</string>
    <string name="calculation_default">0</string>
    <string-array name="calculation_entries">
        <item> Jafari</item>
        <item> University of Islamic Sciences, Karachi </item>
        <item> Islamic Society of North America </item>
        <item> Muslim World League </item>
        <item> Umm al-Qura, Makkah </item>
        <item> Egyptian General Authority of Survey </item>
        <item> University of Tehran </item>
    </string-array>
    <string-array name="calculation_values">
        <item>0</item>
        <item> 1 </item>
        <item> 2 </item>
        <item> 3 </item>
        <item> 4 </item>
        <item> 5 </item>
        <item> 6 </item>
    </string-array>
    <string name="time">time</string>
    <string name="time_title">Time Format</string>
    <string name="time_default">0</string>
    <string-array name="time_entries">
        <item>24 Hours</item>
        <item>12 Hours</item>
        <item>12-hour format with no suffix</item>
        <item> floating point number </item>
    </string-array>
    <string-array name="time_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="latitude">latitude</string>
    <string name="latitude_title">Latitude Adjustments</string>
    <string name="latitude_default">0</string>
    <string-array name="latitude_entries">
        <item>None</item>
        <item>Middle of the Night</item>
        <item>1/7 of the Night</item>
        <item>Angle based Method</item>
    </string-array>
    <string-array name="latitude_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="title_activity_home2">home2</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings2">Settings</string>
    <string name="app_name2" translatable="false">Qibla Compass Library</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>
    <string name="gps_settings_title" translatable="false">GPS settings</string>
    <string name="gps_settings_text" translatable="false">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings_button_ok" translatable="false">Settings</string>
    <string name="settings_button_cancel" translatable="false">Cancel</string>
</resources>