<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearSettings"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylecyan_100">

        <LinearLayout
            android:id="@+id/linearSettingsf"
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_53pxv"
            android:layout_marginEnd="@dimen/_39pxh"
            android:layout_marginBottom="@dimen/_20pxv"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                app:contentInsetStart="0dp">

                <LinearLayout
                    android:id="@+id/linearRowsettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageBack"
                        android:layout_width="@dimen/_25pxh"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_settings"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_settings" />

                    <TextView
                        android:id="@+id/txtManageLocation"
                        style="@style/txtPoppinsbold24"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_76pxh"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/location" />

                    <ImageView
                        android:id="@+id/imageSettings"
                        android:layout_width="@dimen/_30pxh"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_marginStart="@dimen/_68pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_search"
                        tools:ignore="ContentDescription"
                        tools:src="@drawable/img_search" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                style="@style/txtPoppinsbold24"
                android:layout_marginTop="56dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_latitude"
                android:text="@string/latitudeValue"
                android:textColor="@color/indigo_900"
                android:textSize="32sp"/>


            <TextView
                style="@style/txtPoppinsbold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/longitude" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_longitude"
                android:text="@string/longitudeValue"
                android:textColor="@color/indigo_900"
                android:textSize="32sp"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetLocation"
                style="@style/btnSolidRounded_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_marginTop="@dimen/_30pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_13pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_13pxv"
                android:singleLine="true"
                android:text="@string/lbl_about"
                android:textAllCaps="false"
                tools:text="@string/getLocation" />
        </LinearLayout>


    </LinearLayout>
</layout>