<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameSignUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylecyan_100">
        <LinearLayout android:id="@+id/linearColumnsettings"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_22pxh"
            android:layout_marginStart="@dimen/_22pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowsettings"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageSettings"
                        android:layout_height="@dimen/_25pxh"
                        android:layout_marginBottom="@dimen/_8pxv"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_25pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_settings"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtQuranApp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_65pxh"
                        android:layout_weight="0.84"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_salahti"
                        style="@style/txtPoppinsbold24" tools:text="@string/lbl_salahti"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <TextView android:ellipsize="end"
                android:id="@+id/txtAsalamuAlaikum"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_asalamu_alaikum"
                style="@style/txtPoppinsbold14" tools:text="@string/msg_asalamu_alaikum"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_sign_up2"
                style="@style/txtPoppinsbold24" tools:text="@string/lbl_sign_up2"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_10"
                android:ellipsize="end" android:hint="@string/lbl_email"
                android:id="@+id/etEmail"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_25pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:textColorHint="@color/indigo_900_cc"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_10"
                android:drawableEnd="@drawable/img_eye"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_15pxh"
                android:paddingStart="@dimen/_27pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:textColorHint="@color/indigo_900_cc"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <EditText
                android:background="@drawable/rectangle_bg_white_a700_radius_10"
                android:drawableEnd="@drawable/img_eye"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_password"
                android:id="@+id/etConfirmPass"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_22pxh"
                android:layout_marginStart="@dimen/_22pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_13pxv"
                android:paddingEnd="@dimen/_15pxh"
                android:paddingStart="@dimen/_12pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:textColorHint="@color/indigo_900_cc"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <FrameLayout android:gravity="start"
                android:id="@+id/frameStackmosqueone"
                android:layout_height="@dimen/_377pxv"
                android:layout_marginTop="@dimen/_6pxv" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageMosqueOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_402pxh"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_mosque1}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mosque1"/>
                <LinearLayout
                    android:id="@+id/linearColumnsignIn"
                    android:layout_width="223dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|center"
                    android:layout_marginStart="@dimen/_66pxh"
                    android:layout_marginTop="@dimen/_59pxv"
                    android:layout_marginEnd="@dimen/_66pxh"
                    android:layout_marginBottom="@dimen/_59pxv"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignIn"
                        style="@style/btnSolidRounded_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_10pxh"
                        android:paddingVertical="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_up2"
                        android:textAllCaps="false"
                        tools:text="@string/lbl_sign_up2" />

                    <TextView
                        android:id="@+id/txtOr"
                        style="@style/txtPoppinsregular13_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginTop="@dimen/_36pxv"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:layout_marginBottom="@dimen/_36pxv"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/lbl_or"
                        tools:text="@string/lbl_or" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSignUp"
                        style="@style/btnSolidRounded_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/_18pxh"
                        android:layout_marginEnd="@dimen/_18pxh"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/_10pxh"
                        android:paddingVertical="@dimen/_10pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_sign_in2"
                        android:textAllCaps="false"
                        tools:text="@string/lbl_sign_in2" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
